--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="busqueda-especifica">
           <p>Busqueda:</p>
           <input type="text" class="main-busqueda-texto" />
-          <button class="boton-busqueda-productos">Buscar</button>
+          <!-- <button class="boton-busqueda-productos">Buscar</button> -->
         </div>
       </div>
       <div class="main-inferior">
