--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -39,6 +39,7 @@
             <div class="precio-productos-final">
               <p>Precio total:</p>
             </div>
+            <button class="producto-boton-comprar">Comprar</button>
           </div>
         </div>
       </div>
@@ -63,5 +64,6 @@
       </div>
     </footer>
     <script src="../js/carrito.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
