Nuevo botón en el carrito cuando está vacío

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -39,7 +39,9 @@
             <div class="precio-productos-final">
               <p>Precio total:</p>
             </div>
-            <button class="producto-boton-comprar">Comprar</button>
+            <div>
+              <button class="producto-boton-comprar">Comprar</button>
+            </div>
           </div>
         </div>
       </div>
