--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <header>
       <nav>
-        <div class="nav-logo"></div>
+        <div class="nav-logo">
+          <img src="../img/logo-empresa.svg" alt="" />
+        </div>
         <div class="nav-derecha">
           <div class="nav-centroNavegacion">
             <ul>
