Retoques finales al estilo

--- a/index.html
+++ b/index.html
@@ -54,19 +54,27 @@
           <div>
             <div class="procesadores-filtro">
               <h2>Procesadores</h2>
-              <input type="checkbox" id="cbox-proce-intel" />
-              <label for="cbox-proce-intel">INTEL</label>
-              <input type="checkbox" id="cbox-proce-amd" />
-              <label for="cbox-proce-amd">AMD</label>
+              <div>
+                <input type="checkbox" id="cbox-proce-intel" />
+                <label for="cbox-proce-intel">INTEL</label>
+              </div>
+              <div>
+                <input type="checkbox" id="cbox-proce-amd" />
+                <label for="cbox-proce-amd">AMD</label>
+              </div>
             </div>
           </div>
           <div>
             <div class="tarjetas-filtro">
               <h2>Tarjetas gráficas</h2>
-              <input type="checkbox" id="cbox-tarjeta-nvidia" />
-              <label for="cbox-tarjeta-nvidia">NVIDIA</label>
-              <input type="checkbox" id="cbox-tarjeta-amd" />
-              <label for="cbox-tarjeta-amd">AMD</label>
+              <div>
+                <input type="checkbox" id="cbox-tarjeta-nvidia" />
+                <label for="cbox-tarjeta-nvidia">NVIDIA</label>
+              </div>
+              <div>
+                <input type="checkbox" id="cbox-tarjeta-amd" />
+                <label for="cbox-tarjeta-amd">AMD</label>
+              </div>
             </div>
           </div>
           <div>
